third_party/move/move-compiler-v2/tests/more-v1/parser/extra_text_after_main.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/extra_text_after_main.move:6:1
  │
6 │ fun foo() {
  │ ^^^ Unexpected characters after end of 'script' function
